<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/globalContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.ShiftLabTest2024Sp.NoActionBar"
    tools:context=".presentation.registration.RegistrationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_contrast_color"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonCard"
        android:padding="@dimen/normal_margin"
        >

        <TextView
            android:id="@+id/main_label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/registration_header"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="@font/sf_pro_display_medium"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageView
            android:id="@+id/name_pic"
            app:layout_constraintTop_toTopOf="@+id/name_edit_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_person"
            style="@style/pic_normal_style" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_edit_layout"
            app:layout_constraintTop_toBottomOf="@id/main_label"
            app:layout_constraintStart_toEndOf="@+id/name_pic"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/registration_name_hint"
            style="@style/editLayout_normal_style">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName"
                android:textSize="@dimen/normal_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surname_edit_layout"
            style="@style/editLayout_normal_style"
            app:layout_constraintTop_toBottomOf="@id/name_edit_layout"
            app:layout_constraintStart_toEndOf="@+id/name_pic"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/registration_surname_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/name_alert"
            app:layout_constraintTop_toBottomOf="@id/surname_edit_layout"
            app:layout_constraintStart_toStartOf="@id/surname_edit_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/registration_name_alert"
            style="@style/alertText_normal_style" />

        <ImageView
            android:id="@+id/birthdate_pic"
            style="@style/pic_normal_style"
            app:layout_constraintTop_toTopOf="@+id/birthdate_edit_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_birthdate"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthdate_edit_layout"
            app:layout_constraintTop_toBottomOf="@id/surname_edit_layout"
            app:layout_constraintStart_toEndOf="@+id/birthdate_pic"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusable="false"
            android:hint="@string/registration_birthdate_hint"
            app:endIconMode="clear_text"
            style="@style/editLayout_normal_style">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthdate_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="datetime|date"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/birthday_alert"
            style="@style/alertText_normal_style"
            app:layout_constraintTop_toBottomOf="@id/birthdate_edit_layout"
            app:layout_constraintStart_toStartOf="@id/birthdate_edit_layout"
            android:text="@string/registration_birthdate_alert"
            />

        <ImageView
            android:id="@+id/password_pic"
            style="@style/pic_normal_style"
            app:layout_constraintTop_toTopOf="@id/password_edit_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_lock"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_layout"
            app:layout_constraintTop_toBottomOf="@id/birthdate_edit_layout"
            app:layout_constraintStart_toEndOf="@+id/password_pic"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/registration_password_hint"
            app:endIconMode="password_toggle"
            style="@style/editLayout_normal_style">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordConfirm_edit_layout"
            style="@style/editLayout_normal_style"
            app:layout_constraintTop_toBottomOf="@id/password_edit_layout"
            app:layout_constraintStart_toEndOf="@+id/password_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:endIconMode="password_toggle"
            android:hint="@string/registration_passwordConf_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordConfirm_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_alert"
            style="@style/alertText_normal_style"
            app:layout_constraintTop_toBottomOf="@id/passwordConfirm_edit_layout"
            app:layout_constraintStart_toStartOf="@id/passwordConfirm_edit_layout"
            android:text="@string/registration_password_alert"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomButtonCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp"
        app:cardElevation="18dp"
        app:cardBackgroundColor="@color/light_contrast_color"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/normal_margin">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registrationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_margin"
                android:layout_marginVertical="@dimen/normal_margin"
                android:text="@string/registration_button_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/light_primary_color"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/registrationButtonTooltip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/registrationButton"
                app:layout_constraintEnd_toEndOf="@id/registrationButton"
                app:layout_constraintStart_toStartOf="@id/registrationButton"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/registration_button_tooltip"
                android:visibility="gone"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>